tests/src/frontend/typechecking/invalid/overridable2.sk
base class Foo {
  fun foo(): void {
    void
  }
}

class Bar() extends Foo {
  fun foo(): void {
    void
  }
}
